<resources>
    <string name="app_name">MediaSafe</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="punto">.</string>
    <string name="div">/</string>
    <string name="mult">x</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="igual">=</string>
    <string name="potencia">^</string>


    <string name="temperatura">Temperatura</string>
    <string name="peso">Peso</string>
    <string name="longitud">Longitud</string>
    <string name="volumen">Volumen</string>
    <string-array name="longitudes">
        <item>Kilómetro</item>
        <item>Metro</item>
        <item>Decímetro</item>
        <item>Centímetro</item>
        <item>Milímetro</item>
        <item>Nanómetro</item>
        <item>Milla</item>
        <item>Pie</item>
        <item>Yarda</item>
        <item>Pulgada</item>
    </string-array>


    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

</resources>