<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tools.calculadora.Calculadora">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_valores"
            android:layout_width="404dp"
            android:layout_height="140dp"
            android:textSize="32dp"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#202020"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_valores" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow4">

            <Button
                android:id="@+id/btn_potencia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/potencia"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_0"
                android:textColor="@color/black"

                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_punto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/punto"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_calcular"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/igual"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#5DC9FF"
                app:cornerRadius="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow3">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_2"
                android:textColor="@color/black"

                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_3"
                android:textColor="@color/black"

                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_sumar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/sumar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow2">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_4"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:textColor="@color/black"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_5"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_6"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_restar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/restar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_7"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:textColor="@color/black"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/num_8"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textColor="@color/black"
                android:text="@string/num_9"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_multiplicar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/mult"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_DEL">

            <Button
                android:id="@+id/btn_limpiar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="C"
                android:textColor="#FF4F4F"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_parentesis_apertura"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="("
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_parentesis_cierre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text=")"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btn_dividir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/div"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FFBDFDF1"
                app:cornerRadius="60dp" />

        </TableRow>

        <Button
            android:id="@+id/btn_DEL"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="end|bottom"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawable="@drawable/ic_launcher_background"
            android:text="DEL"
            android:textSize="8sp"
            app:backgroundTint="#FFBDFDF1"
            app:cornerRadius="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>